@@ -9,3 +9,4 @@ mkdir_heute
 README
 t/Organize.t
 t/script-mkdir_heute.t
+META.json
