@@ -1,0 +1,43 @@
+{
+   "abstract" : "Create and Organize Directories",
+   "author" : [
+      "Mathias Weidner <mathias@weidner.in-bad-schmiedeberg.de>"
+   ],
+   "dynamic_config" : 1,
+   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.110440",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Directory-Organize",
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Module::Build" : "0.38"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Getopt::Long" : 0,
+            "Term::ReadKey" : 0,
+            "version" : 0
+         }
+      }
+   },
+   "provides" : {
+      "Directory::Organize" : {
+         "file" : "lib/Directory/Organize.pm",
+         "version" : "v0.9.4"
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "license" : [
+         "http://dev.perl.org/licenses/"
+      ]
+   },
+   "version" : "v0.9.4"
+}
